docs-archive/apache-airflow-providers-databricks/7.16.0/_sources/_api/airflow/providers/databricks/hooks/databricks_sql/index.rst.txt
airflow.providers.databricks.hooks.databricks_sql
=================================================

.. py:module:: airflow.providers.databricks.hooks.databricks_sql


Attributes
----------

.. autoapisummary::

   airflow.providers.databricks.hooks.databricks_sql.T
   airflow.providers.databricks.hooks.databricks_sql.log


Classes
-------

.. autoapisummary::

   airflow.providers.databricks.hooks.databricks_sql.DatabricksSqlHook


Functions
---------

.. autoapisummary::

   airflow.providers.databricks.hooks.databricks_sql.create_timeout_thread


Module Contents
---------------

.. py:data:: T

.. py:data:: log

.. py:function:: create_timeout_thread(cur, execution_timeout)

   Create a timeout timer that cancels the connection and sets a timeout flag.


.. py:class:: DatabricksSqlHook(databricks_conn_id = BaseDatabricksHook.default_conn_name, http_path = None, sql_endpoint_name = None, session_configuration = None, http_headers = None, catalog = None, schema = None, caller = 'DatabricksSqlHook', query_tags = None, **kwargs)

   Bases: :py:obj:`airflow.providers.databricks.hooks.databricks_base.BaseDatabricksHook`, :py:obj:`airflow.providers.common.sql.hooks.sql.DbApiHook`


   Hook to interact with Databricks SQL.

   :param databricks_conn_id: Reference to the
       :ref:`Databricks connection <howto/connection:databricks>`.
   :param http_path: Optional string specifying HTTP path of Databricks SQL Endpoint or cluster.
       If not specified, it should be either specified in the Databricks connection's extra parameters,
       or ``sql_endpoint_name`` must be specified.
   :param sql_endpoint_name: Optional name of Databricks SQL Endpoint. If not specified, ``http_path``
       must be provided as described above.
   :param session_configuration: An optional dictionary of Spark session parameters. Defaults to None.
       If not specified, it could be specified in the Databricks connection's extra parameters.
   :param http_headers: An optional list of (k, v) pairs that will be set as HTTP headers
       on every request
   :param catalog: An optional initial catalog to use. Requires DBR version 9.0+
   :param schema: An optional initial schema to use. Requires DBR version 9.0+
   :param query_tags: An optional dict of query tags to attach to every SQL statement executed by
       this hook.  Tags are injected via the ``QUERY_TAGS`` Databricks session parameter so they
       appear in ``system.query.history``.  Any existing ``QUERY_TAGS`` already present in
       *session_configuration* are preserved and the new tags are appended.
   :param kwargs: Additional parameters internal to Databricks SQL Connector parameters


   .. py:attribute:: hook_name
      :value: 'Databricks SQL'



   .. py:attribute:: supports_autocommit
      :value: True



   .. py:attribute:: session_config
      :value: None



   .. py:attribute:: http_headers
      :value: None



   .. py:attribute:: catalog
      :value: None



   .. py:attribute:: schema
      :value: None



   .. py:attribute:: additional_params


   .. py:attribute:: query_ids
      :type:  list[str]
      :value: []



   .. py:attribute:: query_tags
      :value: None



   .. py:method:: get_conn()

      Return a Databricks SQL connection object.



   .. py:property:: sqlalchemy_url
      :type: sqlalchemy.engine.URL


      Return a Sqlalchemy.engine.URL object from the connection.

      :return: the extracted sqlalchemy.engine.URL object.



   .. py:method:: get_uri()

      Extract the URI from the connection.

      :return: the extracted uri.



   .. py:method:: run(sql: str | collections.abc.Iterable[str], autocommit: bool = ..., parameters: collections.abc.Iterable | collections.abc.Mapping[str, Any] | None = ..., handler: None = ..., split_statements: bool = ..., return_last: bool = ..., execution_timeout: datetime.timedelta | None = None) -> None
                  run(sql: str | collections.abc.Iterable[str], autocommit: bool = ..., parameters: collections.abc.Iterable | collections.abc.Mapping[str, Any] | None = ..., handler: collections.abc.Callable[[Any], T] = ..., split_statements: bool = ..., return_last: bool = ..., execution_timeout: datetime.timedelta | None = None) -> tuple | list[tuple] | list[list[tuple] | tuple] | None

      Run a command or a list of commands.

      Pass a list of SQL statements to the SQL parameter to get them to
      execute sequentially.

      :param sql: the sql statement to be executed (str) or a list of
          sql statements to execute
      :param autocommit: What to set the connection's autocommit setting to
          before executing the query. Note that currently there is no commit functionality
          in Databricks SQL so this flag has no effect.

      :param parameters: The parameters to render the SQL query with.
      :param handler: The result handler which is called with the result of each statement.
      :param split_statements: Whether to split a single SQL string into statements and run separately
      :param return_last: Whether to return result for only last statement or for all after split
      :return: return only result of the LAST SQL expression if handler was provided unless return_last
          is set to False.
      :param execution_timeout: max time allowed for the execution of this task instance, if it goes beyond
          it will raise and fail.



   .. py:method:: bulk_dump(table, tmp_file)
      :abstractmethod:


      Dump a database table into a tab-delimited file.

      :param table: The name of the source table
      :param tmp_file: The path of the target file



   .. py:method:: bulk_load(table, tmp_file)
      :abstractmethod:


      Load a tab-delimited file into a database table.

      :param table: The name of the target table
      :param tmp_file: The path of the file to load into the table



   .. py:method:: get_openlineage_database_info(connection)

      Return database specific information needed to generate and parse lineage metadata.

      This includes information helpful for constructing information schema query
      and creating correct namespace.

      :param connection: Airflow connection to reduce calls of `get_connection` method



   .. py:method:: get_openlineage_database_dialect(_)

      Return database dialect used for SQL parsing.

      For a list of supported dialects check: https://openlineage.io/docs/development/sql#sql-dialects



   .. py:method:: get_openlineage_default_schema()

      Return default schema specific to database.

      .. seealso::
          - :class:`airflow.providers.openlineage.sqlparser.SQLParser`



   .. py:method:: get_openlineage_database_specific_lineage(task_instance)

      Emit separate OpenLineage events for each Databricks query, based on executed query IDs.

      If a single query ID is present, also add an `ExternalQueryRunFacet` to the returned lineage metadata.

      Note that `get_openlineage_database_specific_lineage` is usually called after task's execution,
      so if multiple query IDs are present, both START and COMPLETE event for each query will be emitted
      after task's execution. If we are able to query Databricks for query execution metadata,
      query event times will correspond to actual query's start and finish times.

      Args:
          task_instance: The Airflow TaskInstance object for which lineage is being collected.

      Returns:
          An `OperatorLineage` object if a single query ID is found; otherwise `None`.



